rahmat payment added

--- a/cart.html
+++ b/cart.html
@@ -890,7 +890,7 @@
                   <li><a href="./index.html#features" data-i18n="nav.features">Xususiyatlar</a></li>
                   <li><a href="#" onclick="window.location.href='cart.html'; return false;"
                       data-i18n="nav.equipment">Qurilmalar</a></li>
-                      <li><a href="#idokon-course" data-i18n="nav.course" style="color: #00AEEF;">I-Do'kon Kurs</a></li>
+                      <li><a href="./index.html#idokon-course" data-i18n="nav.course" style="color: #00AEEF;">I-Do'kon Kurs</a></li>
 
                   <li><a href="./index.html#integrations" data-i18n="nav.integrations">Integratsiyalar</a></li>
                   <li><a href="./index.html#pricing" data-i18n="nav.pricing">Ta'riflar</a></li>
